--- a/true-grid/references.bib
+++ b/true-grid/references.bib
@@ -1,3 +1,44 @@
+
+@article{jones2003user,
+  title={A user-centred approach to functions in Excel},
+  author={Jones, Simon Peyton and Blackwell, Alan and Burnett, Margaret},
+  journal={ACM SIGPLAN Notices},
+  volume={38},
+  number={9},
+  pages={165--176},
+  year={2003},
+  publisher={ACM}
+}
+
+@inproceedings{hermans_2015_19341,
+  author       = {Hermans, Felienne and van der Storm, Tijs},
+  title        = {{Copy-Paste Tracking: Fixing Spreadsheets Without 
+                   Breaking Them}},
+  booktitle    = {{Proceedings of the First International Conference 
+                   on Live Coding (ICLC'15)}},
+  year         = 2015,
+  pages        = {104--109}
+}
+
+
+@book{mugridge2005fit,
+  title={Fit for developing software: framework for integrated tests},
+  author={Mugridge, Rick and Cunningham, Ward},
+  year={2005},
+  publisher={Pearson Education}
+}
+
+
+@inproceedings{lieberman1995bridging,
+  title={Bridging the gulf between code and behavior in programming},
+  author={Lieberman, Henry and Fry, Christopher},
+  booktitle={Proceedings of the SIGCHI conference on Human factors in computing systems},
+  pages={480--486},
+  year={1995},
+  organization={ACM Press/Addison-Wesley Publishing Co.}
+}
+
+
 @inproceedings{maloney_directness_1995,
 	address = {New York, NY, USA},
 	series = {{UIST} '95},
@@ -22,7 +63,7 @@
   title = {Inventing on Principle},
   organization = {Invited talk at the Canadian University Software Engineering Conference (CUSEC)},
   year = 2012,
-  url = {http://vimeo.com/36579366}
+  url = {http://vimeo.com/36579366},
   urldate = {2015-10-08}
 }
 
