--- a/true-grid/paper_SEMS16.tex
+++ b/true-grid/paper_SEMS16.tex
@@ -90,8 +90,8 @@ In our example, we use JavaScript as a language, however, the idea itself is not
 
 \begin{figure}
   \begin{center}
-  \includegraphics[width=9cm]{fig/TG.png}
-  \caption{A True Grid \todo{make ss with syntax highlighting, and add explanation}}
+  \includegraphics[width=12cm]{fig/TG.png}
+  \caption{A True Grid implementation, with the code editor on the left hand side and the grid on the righ, available via http://www.felienne.com/TrueGrid/}
   \label{fig:TG}
   \end{center}
 \end{figure} 
