updated references and changed screenshot

--- a/true-grid/paper_SEMS16.tex
+++ b/true-grid/paper_SEMS16.tex
@@ -58,11 +58,11 @@ We illustrate these benefits using a prototype implementation of TrueGrid that r
 
 \section{Introduction}
 %\subsection{Spreadsheets}
-Spreadsheets are very popular tools for end-user programming \todo{cite proof}. Their formula language is easy to learn and their grid interface is inviting. Apart from this, spreadsheets are \textit{live}: the  user interface reacts immediately to changes in input or code.
+Spreadsheets are very popular tools for end-user programming. Their formula language is easy to learn and their grid interface is inviting. Apart from this, spreadsheets are \textit{live}: the  user interface reacts immediately to changes in input or code.
 Live programming helps bridging the gulf between code and behavior because the user receives immediate feedback on their actions~\cite{lieberman1995bridging}.
 More recently, live programming has found its way to a wider audience, for instance, by Bret Victor's influential talk \textit{Inventing on Principle}~\cite{Victor2012}. Figure \ref{fig:bret}, taken from Victor's talk, illustrates the idea of live programming: on the right, we have source code and on the left, we have the result of that code, in this case, a tree drawing. Modifying the code will immediately affect the visual representation of the tree.
 
-This liveness is one of the core features of most spreadsheet systems. When a users enters a formula and presses enter, they see the result, without long edit-compile-run cycles. This live characteristic of spreadsheets is often praised as their key success factor~\cite{proof}.
+This liveness is one of the core features of most spreadsheet systems. When a users enters a formula and presses enter, they see the result, without long edit-compile-run cycles. This live characteristic of spreadsheets is often praised as their key success factor~\cite{HermansPhD}.
 \begin{figure}
   \begin{center}
   \includegraphics[width=9cm]{fig/bret.png}
