--- a/true-grid/references.bib
+++ b/true-grid/references.bib
@@ -1,44 +1,3 @@
-
-@article{jones2003user,
-  title={A user-centred approach to functions in Excel},
-  author={Jones, Simon Peyton and Blackwell, Alan and Burnett, Margaret},
-  journal={ACM SIGPLAN Notices},
-  volume={38},
-  number={9},
-  pages={165--176},
-  year={2003},
-  publisher={ACM}
-}
-
-@inproceedings{hermans_2015_19341,
-  author       = {Hermans, Felienne and van der Storm, Tijs},
-  title        = {{Copy-Paste Tracking: Fixing Spreadsheets Without 
-                   Breaking Them}},
-  booktitle    = {{Proceedings of the First International Conference 
-                   on Live Coding (ICLC'15)}},
-  year         = 2015,
-  pages        = {104--109}
-}
-
-
-@book{mugridge2005fit,
-  title={Fit for developing software: framework for integrated tests},
-  author={Mugridge, Rick and Cunningham, Ward},
-  year={2005},
-  publisher={Pearson Education}
-}
-
-
-@inproceedings{lieberman1995bridging,
-  title={Bridging the gulf between code and behavior in programming},
-  author={Lieberman, Henry and Fry, Christopher},
-  booktitle={Proceedings of the SIGCHI conference on Human factors in computing systems},
-  pages={480--486},
-  year={1995},
-  organization={ACM Press/Addison-Wesley Publishing Co.}
-}
-
-
 @inproceedings{maloney_directness_1995,
 	address = {New York, NY, USA},
 	series = {{UIST} '95},
@@ -57,14 +16,21 @@
 }
 
 
+@inproceedings{hermans_2015_19341,
+	title = {Copy-Paste Tracking: Fixing Spreadsheets Without Breaking Them},
+	author = {Hermans, Felienne and Tijs van der Storm},
+	year = {2015},
+	booktitle = {Proceedings of the International Conference on Live Coding},
+}
+
+
 
 @incollection{Victor2012,
   author = {Bret Victor},
-  title = {Inventing on Principle},
   organization = {Invited talk at the Canadian University Software Engineering Conference (CUSEC)},
+  title = {Inventing on Principle},
   year = 2012,
-  url = {http://vimeo.com/36579366},
-  urldate = {2015-10-08}
+  url = {http://vimeo.com/36579366}
 }
 
 
@@ -83,6 +49,39 @@
 	file = {Snapshot:C\:\\Users\\Felienne\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\dgizxtry.default\\zotero\\storage\\42HVS3TN\\abstract\;jsessionid=890D77C4F34271648DB0D377BF7AFA8C.html:text/html}
 }
 
+@phdthesis{HermansPhD,
+    title    = {Analyzing and Visualizing Spreadsheets},
+    school   = {Delft University of Technology},
+    author   = {Hermans, Felienne},
+    year     = {2013},
+}
+
+@book{mugridge2005fit,
+	title = {Fit for Developing Software: Framework for Integrated Tests},
+	author = {Rick Mugridge and Ward Cunningham},
+	year = {2005},
+	publisher = {Prentice Hall}	
+	publisher = {Prentice Hall}	
+	}
+
+
+@inproceedings{lieberman1995bridging,
+ author = {Lieberman, Henry and Fry, Christopher},
+ title = {Bridging the Gulf Between Code and Behavior in Programming},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '95},
+ year = {1995},
+ isbn = {0-201-84705-1},
+ location = {Denver, Colorado, USA},
+ pages = {480--486},
+ numpages = {7},
+ url = {http://dx.doi.org/10.1145/223904.223969},
+ doi = {10.1145/223904.223969},
+ acmid = {223969},
+ publisher = {ACM Press/Addison-Wesley Publishing Co.},
+ address = {New York, NY, USA},
+} 
+
 @article{shneiderman_direct_1983,
 	title = {Direct {Manipulation}: {A} {Step} {Beyond} {Programming} {Languages}},
 	volume = {16},
@@ -98,4 +97,14 @@
 	keywords = {Command languages, Computer interfaces, Computer languages, Displays, Human factors, Interactive systems, Office automation, Power system modeling, Publishing, user interfaces},
 	pages = {57--69},
 	file = {IEEE Xplore Abstract Record:C\:\\Users\\Felienne\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\dgizxtry.default\\zotero\\storage\\KUIDWSPM\\abs_all.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\Felienne\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\dgizxtry.default\\zotero\\storage\\GTU84IMD\\Shneiderman - 1983 - Direct Manipulation A Step Beyond Programming Lan.pdf:application/pdf}
+}
+@article{jones2003user,
+  title={A user-centred approach to functions in Excel},
+  author={Jones, Simon Peyton and Blackwell, Alan and Burnett, Margaret},
+  journal={ACM SIGPLAN Notices},
+  volume={38},
+  number={9},
+  pages={165--176},
+  year={2003},
+  publisher={ACM}
 }
